2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* GoldenSphereAnimation.wrl: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ScreenGroup.wrl: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Ghost_proto.wrl: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Ghost_proto.wrl: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* PointLight.x3dv:
	* OutlineEditor.x3d: 

2014-08-01  Holger Seelig  <holger.seelig@yahoo.de>

	* 1728.x3dv:
	* Border.wrl: 

2014-07-31  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DNode.wrl: 

2014-07-28  Holger Seelig  <holger.seelig@yahoo.de>

	* 1728.x3dv: 

2014-07-28  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl:
	* Fields.wrl:
	* Fields.x3d: 

2014-07-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Fields.wrl:
	* 1728.x3dv: 

2014-07-27  Holger Seelig  <holger.seelig@yahoo.de>

	* 1728.x3dv:
	* ClipPlane.wrl: 

2014-07-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* 1728.x3dv: 

2014-07-26  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Cube.wrl:
	* Shutdown.x3dv: 

2014-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Shutdown.x3dv: 

2014-07-22  Holger Seelig  <holger.seelig@yahoo.de>
