@@ -6,7 +6,7 @@
     <meta name='created' content='Sun, 06 Apr 2014 10:12:16 GMT'/>
     <meta name='creator' content='Holger Seelig'/>
     <meta name='generator' content='Titania V0.7.1, http://titania.create3000.de'/>
-    <meta name='modified' content='Sun, 03 Aug 2014 23:11:11 GMT'/>
+    <meta name='modified' content='Sun, 03 Aug 2014 23:53:51 GMT'/>
   </head>
   <Scene>
     <ExternProtoDeclare name='Rotor' url='"http://titania.create3000.de/Library/Prototypes/0.1/Engines/Rotor.x3dv"'>
@@ -118,7 +118,7 @@
         skyColor='0.0196078 0.0196078 0.0196078, 0.054902 0.0705882 0.0862745, 0.203922 0.243137 0.313726, 0.541176 0.462745 0.435294, 0.745098 0.541176 0.376471, 0.890196 0.537255 0.172549'
         groundColor='0 0 0'/>
     <Viewpoint DEF='Viewpoint1'
-        description='OutlineEditor'
+        description='First'
         position='-12.7637 11.9333 7.63958'
         orientation='0.384284 0.874898 0.294753 4.89137'
         centerOfRotation='6.5001 -2.87208 1.38145'/>
@@ -287,7 +287,7 @@
           <Material/>
         </Appearance>
         <Text DEF='Text2'
-            string='"modified...", "So 03 Aug 2014 17:59:38 CEST"'>
+            string='"modified...", "Mo 04 Aug 2014 01:50:36 CEST"'>
           <ScreenFontStyle
               family='"SANS"'
               style='BOLD'/>
@@ -309,7 +309,7 @@
         size='1 1 1'
         center='3.77007 0 -2.89052'/>
     <Viewpoint DEF='Viewpoint2'
-        description='OutlineEditor'
+        description='Second'
         position='0.307405 1.46693 4.56711'
         orientation='0.563368 0.806068 0.181301 5.84917'
         centerOfRotation='1.83783 -0.942352 -0.631597'/>
@@ -321,8 +321,11 @@
 function initialize ()
 {
 	var modified = Browser .currentScene .getMetaData ("modified");
-	var date = new Date (Date .parse (modified));
+	var date     = new Date (Date .parse (modified));
+
 	string_changed = new MFString ("modified...", date .toLocaleString ());
+
+	print (string_changed);
 }]]> 
     </Script>
     <Transform DEF='EXPORT'
@@ -384,6 +387,7 @@ function initialize ()
         <Transform DEF='_7'>
           <Transform DEF='Box6'
               translation='3.41006 3.13929 -2.83073'
+              rotation='1 3.62371e-06 -7.13492e-10 0.785398'
               scale='0.468189 0.468189 0.468189'>
             <Shape DEF='_8'>
               <Appearance>
@@ -453,7 +457,7 @@ function initialize ()
       <ProximitySensor USE='_9'/>
       <Transform DEF='Box'
           translation='1.40843 1.10727 0.193803'
-          rotation='0 0 1 5.98113'
+          rotation='0 0 1 5.35572'
           scale='0.2 0.2 0.2'>
         <Transform>
           <Shape>
@@ -503,12 +507,12 @@ function initialize ()
       <DirectionalLight
           intensity='0.3'/>
     </Transform>
-    <Switch
+    <Switch DEF='Viewpoint'
         whichChoice='0'>
-      <Viewpoint DEF='_10'
+      <Viewpoint
           description='Third'/>
     </Switch>
-    <OrthoViewpoint DEF='_11'
+    <OrthoViewpoint
         description='OrthoViewpoint'
         position='2.06889 0.664904 10.404'
         centerOfRotation='2.06889 0.664904 0'/>
