@@ -1,3 +1,9 @@
+2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineEditor.cpp:
+	* MFImage.svg:
+	* SFImage.svg: 
+
 2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* ViewpointList.cpp: 
