@@ -1,5 +1,10 @@
 2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Console.h:
+	* Console.cpp: 
+
+2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* libtitania-x3d.cproj:
 	* ViewpointTool.x3dv:
 	* OrthoViewpointTool.h:
