@@ -2,6 +2,10 @@
 
 	* OutlineEditor.x3d: 
 
+2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* OutlineEditor.x3d: 
+
 2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* OutlineEditor.x3d: 
